--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,6 +43,10 @@ QPushButton:pressed
 	transform: scale(0.97);
 	border-color:rgb(95,95,95);
 }
+QPushButton:disabled
+{
+	background-color: #FFA07A;
+}
 QMainWindow
 {
 	background-color: rgb(255,228,225);
@@ -87,7 +91,7 @@ QSlider::sub-page
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,0,1,0,1">
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1">
+           <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,10,1">
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0">
               <item>
@@ -220,7 +224,7 @@ QSlider::sub-page
              </layout>
             </item>
             <item>
-             <widget class="QListWidget" name="listWidget">
+             <widget class="QListWidget" name="taskList">
               <property name="styleSheet">
                <string notr="true">QListWidget
 {
@@ -228,7 +232,32 @@ QSlider::sub-page
 	border: 0px;
 }</string>
               </property>
+              <property name="dragEnabled">
+               <bool>true</bool>
+              </property>
+              <property name="dragDropOverwriteMode">
+               <bool>false</bool>
+              </property>
+              <property name="dragDropMode">
+               <enum>QAbstractItemView::DragDropMode::DragDrop</enum>
+              </property>
+              <property name="defaultDropAction">
+               <enum>Qt::DropAction::MoveAction</enum>
+              </property>
              </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_5">
+              <property name="orientation">
+               <enum>Qt::Orientation::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
@@ -601,19 +630,6 @@ QSlider::sub-page
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Orientation::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="1,3,1">
         <item>
          <spacer name="horizontalSpacer_11">
@@ -896,5 +912,22 @@ QSlider::sub-page
  <resources>
   <include location="res.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>horizontalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>lab_volume</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>706</x>
+     <y>441</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>771</x>
+     <y>454</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
