--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -621,6 +621,11 @@ QListWidget::indicator:checked
           </item>
           <item>
            <widget class="QLineEdit" name="lineEdit">
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string/>
             </property>
