--- a/res.qrc
+++ b/res.qrc
@@ -22,5 +22,15 @@
         <file>images/repeat.png</file>
         <file>images/repeat_once.png</file>
         <file>images/playList.png</file>
+        <file>images/clear.png</file>
+        <file>images/folder.png</file>
+        <file>images/cut.png</file>
+        <file>images/copy.png</file>
+        <file>images/paste.png</file>
+        <file>images/redo.png</file>
+        <file>images/undo.png</file>
+        <file>images/bold.png</file>
+        <file>images/italic.png</file>
+        <file>images/underline.png</file>
     </qresource>
 </RCC>
