--- a/notewindow.ui
+++ b/notewindow.ui
@@ -123,7 +123,7 @@ QToolBar
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,4,2">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,2,8,1,1,2">
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
@@ -151,6 +151,45 @@ QToolBar
        <widget class="QComboBox" name="noteCombo">
         <property name="editable">
          <bool>true</bool>
+        </property>
+        <property name="maxVisibleItems">
+         <number>40</number>
+        </property>
+        <property name="frame">
+         <bool>true</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>未命名笔记</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_addNote">
+        <property name="toolTip">
+         <string>新建笔记</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="res.qrc">
+          <normaloff>:/icons/images/add.png</normaloff>:/icons/images/add.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_deleteNote">
+        <property name="toolTip">
+         <string>删除笔记</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="res.qrc">
+          <normaloff>:/icons/images/delete.png</normaloff>:/icons/images/delete.png</iconset>
         </property>
        </widget>
       </item>
