--- a/res.qrc
+++ b/res.qrc
@@ -33,5 +33,11 @@
         <file>images/italic.png</file>
         <file>images/underline.png</file>
         <file>images/title.png</file>
+        <file>images/down.png</file>
+        <file>images/up.png</file>
+    </qresource>
+    <qresource prefix="/fonts">
+        <file>fonts/Huxiaobo.ttf</file>
+        <file>fonts/Weilaiyuan.ttf</file>
     </qresource>
 </RCC>
