--- a/setdialog.ui
+++ b/setdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>213</width>
-    <height>173</height>
+    <width>247</width>
+    <height>213</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,7 +42,24 @@ QDialog
 }
 QSpinBox
 {
-	background-color:#314F4F;
+	background-color:#314F4F;	
+	color:white;
+	border:1px solid black;
+	border-radius:4px;
+}
+QSpinBox::up-button
+{
+	background-color:#4A5A6F;
+	image:url(:/icons/images/up.png);
+	border-left:1px solid black;
+	border-bottom:1px solid black;
+}
+QSpinBox::down-button
+{
+	background-color:#4A5A6F;
+	image:url(:/icons/images/down.png);
+	border-left:1px solid black;
+	
 }
 QLabel
 {
@@ -626,6 +643,65 @@ QLabel
       </layout>
      </item>
      <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_reset">
+         <property name="minimumSize">
+          <size>
+           <width>64</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>恢复默认</string>
+         </property>
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="res.qrc">
+           <normaloff>:/icons/images/reset.png</normaloff>:/icons/images/reset.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="btn_OK">
@@ -647,7 +723,9 @@ QLabel
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>btn_OK</sender>
