--- a/setdialog.ui
+++ b/setdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>番茄钟设置</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton
